<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Goalmania</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawable_folder">drawable</string>
    <string name="jersey_resources">resources.xml</string>
    
    
    
    <string name="icon_error">icon_error_image</string>
    <string name="icon_validate">icon_validate_image</string>
    
    <string name="team_name_label">Equipe</string>
    <string name="type_jersey_label">Type</string>
    <string name="year_jersey_label">Année</string>

    
    <string name="championship_title">Championats</string>
    <string name="club_title">Clubs</string>
    <string name="team_title">Equipes</string>
    <string name="jersey_title">Maillots</string>
    <string name="order_title">Commande</string>
    <string name="order_subtitle">Selection</string>
    
    <string name="order_item_title">Élement commande</string>
    <string name="lb_button_remove_orderitem">Supprimer</string>
    <string name="lb_button_validate_orderitem">Valider</string>
 
    
    <string name="order_flocking">Flocage : </string>
    <string name="order_number">Numéro : </string>
    <string name="order_size">Taille : </string>
    <string name="order_sleeves">Manches : </string>
    <string name="order_team">Equipe : </string>
    
    
    <string name="title_activity_jersey_detail">JerseyDetailActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    
    <string name="what_is_this">Bonjour ca va?</string>
    <string name="responsive_explanation">Test Mac.</string>
    
 	<string name="attach">Attach</string>
</resources>