<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">


<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name_label"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/team_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_jersey_label"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/type_jersey_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_jersey_label"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/year_jersey_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" >
    </TextView>

    <ImageView
        android:id="@+id/imageJerseyDetail"
        android:layout_width="168dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
</ScrollView>