<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
           android:background="@color/white" >

        <LinearLayout
            android:id="@+id/rootLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingTop="10px" >

                <ImageView
                    android:id="@+id/imageJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top|start"
                    android:layout_weight="1"
                    android:src="@drawable/naples" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.7"
                    android:orientation="vertical"
                    android:paddingLeft="10px" >

                    <TextView
                        android:id="@+id/nameJerseyOrderDetailItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10px"
                        android:paddingTop="30px"
                        android:text="@string/team_name_label" />

                    <TextView
                        android:id="@+id/typeJerseyOrderDetailItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameJerseyOrderDetailItem"
                        android:paddingBottom="10px"
                        android:paddingTop="10px"
                        android:text="@string/type_jersey_label" />

                    <TextView
                        android:id="@+id/yearJerseyOrderDetailItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/typeJerseyOrderDetailItem"
                        android:paddingBottom="10px"
                        android:paddingTop="10px"
                        android:text="@string/year_jersey_label" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10px" >

                <TextView
                    android:id="@+id/flockingJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/order_flocking" />

                <EditText
                    android:id="@+id/editFlockingJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.7"
                    android:ems="10" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10px" >

                <TextView
                    android:id="@+id/numberJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/order_number" />

                <EditText
                    android:id="@+id/editNumberJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:inputType="number" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10px"
                android:paddingTop="10px" >

                <TextView
                    android:id="@+id/sleevesJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/order_sleeves" />

                <RadioGroup
                    android:id="@+id/sleevesGroupItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.65"
                    android:checkedButton="@+id/sleevesShortItem"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/sleevesShortItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Courtes" />

                    <RadioButton
                        android:id="@+id/sleevesLargeItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Longues" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10px" 
                android:paddingTop="10px" >

                <TextView
                    android:id="@+id/editSizeJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/order_size" />

                <Spinner
                    android:id="@+id/listSizeJerseyOrderDetailItem"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.7" >
                </Spinner>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/rootLayout"
            android:gravity="bottom|center_vertical|end"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonRemoveJerseyOrderDetailItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_remove_order"
                android:text="@string/lb_button_remove_orderitem" />

            <Button
                android:id="@+id/buttonValidateJerseyOrderDetailItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/icon_validate_order"
                android:text="@string/lb_button_validate_orderitem" />
        </LinearLayout>
    </RelativeLayout>

    </ScrollView>
